--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,10 +28,14 @@
     </div>
   </nav>
 
-  <p class='notice'><%= notice %></p>
-  <p class='alert'><%= alert %></p>
-
   <div class='container'>
+    <% if !notice.blank? %>
+      <p class='notice'><%= notice %></p>
+    <% end %>
+    <% if !alert.blank? %>
+      <p class='alert'><%= alert %></p>
+    <% end %>
+
     <%= yield %>
   </div>
 
